package com.github.jameshnsears.chance.ui.dialog.bag.card.dice

class DiceTestTag {
    companion object {
        const val DICE_TITLE = "DICE_TITLE"
        const val DICE_SIDES = "DICE_SIDES"
        const val DICE_COLOUR = "DICE_COLOUR"
    }
}
