package com.github.jameshnsears.chance.ui.dialog.dice

class ButtonFeatureTestTag {
    companion object {
        const val BUTTON_FEATURE_CANCEL = "BUTTON_FEATURE_CANCEL"
        const val BUTTON_FEATURE_DELETE = "BUTTON_FEATURE_DELETE"
        const val BUTTON_FEATURE_CLONE = "BUTTON_FEATURE_CLONE"
        const val BUTTON_FEATURE_SAVE = "BUTTON_FEATURE_SAVE"
    }
}

